--- a/app/composer.json
+++ b/app/composer.json
@@ -2,12 +2,13 @@
 	"require":{
 		"illuminate/database": "^8.73.0",
 		"slim/slim": "3.*",
-		"php": ">=7.3"
+		"php": ">=7.3",
+		"fakerphp/faker": "^1.19"
 	},
 
 	"autoload":{
 		"psr-4": {
-			"teezer\\" : "./src"
+			"app\\" : "./src"
 		}
 	}
 }
